<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".feature.createcontactnetwork.CreateContactNetworkFragment">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtContactNetworkName"
            style="@style/fullWidthTextInputLayout"
            android:hint="@string/contact_network_name">

            <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/space" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtContactNetworkPassword"
            style="@style/fullWidthTextInputLayout"
            android:hint="@string/contact_network_password"
            app:endIconMode="password_toggle"
            app:helperText="@string/optional">

            <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/space" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateContactNetwork"
            style="@style/fullWidthButton"
            android:text="@string/create" />

    </LinearLayout>

</FrameLayout>