<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContactNetworkName"
        style="@style/fullWidthTextInputLayout"
        android:hint="@string/contact_network_name">

        <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/app_padding" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContactNetworkPassword"
        style="@style/fullWidthTextInputLayout"
        android:hint="@string/contact_network_password"
        app:endIconMode="password_toggle"
        app:helperText="@string/optional">

        <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/app_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancelContactNetworkCreation"
            style="@style/text_click"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|start"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtConfirmContactNetworkCreation"
            style="@style/text_click"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|end"
            android:text="@android:string/ok"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>